--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
+    "primer-base": "^1.7.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-fontawesome": "^1.6.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
@@ -18,5 +20,8 @@
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.1.1"
   }
 }
