--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@fortawesome/free-regular-svg-icons": "^5.1.0-11",
     "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
     "@fortawesome/react-fontawesome": "0.1.0-11",
+    "@ibm/plex": "^1.0.2",
     "i": "^0.3.6",
     "node-sass-chokidar": "^1.3.3",
+    "nodemailer": "^4.6.7",
     "npm": "^6.2.0",
     "npm-run-all": "^4.1.3",
     "primer-base": "^1.7.3",
