--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "npm-run-all": "^4.1.3",
     "primer-base": "^1.7.3",
     "react": "^16.4.1",
+    "react-burger-menu": "^2.5.2",
     "react-dom": "^16.4.1",
     "react-fontawesome": "^1.6.1",
-    "react-scripts": "1.1.4"
+    "react-modal": "^3.5.1",
+    "react-scripts": "1.1.4",
+    "react-scrollchor": "^6.0.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
